# TrafficDetection

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.gpu  Dockerfile.jetson  app.py  best_quant.onnx  docker-compose.yml  index.html  requirements.txt  yolov8n_quant.onnx
.github/workflows/: jetson-docker.yml  jetson-gpu-docker.yml
cpp_pipeline/: CMakeLists.txt  main.cpp
jetson_pipeline/: CMakeLists.txt  build.bat  main.cpp
